--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_LINK = mongodb+srv://gsandha:gagangagan@cluster0.zhilydl.mongodb.net/recipe?retryWrites=true&w=majority
-PORT_LINK = 9000
+MONGO_LINK = mongodb+srv://suman:sumanbiswas@cluster0.5qhf5jb.mongodb.net/recipe?retryWrites=true&w=majority
+PORT_LINK = 7000
